# pikppo

./: .gitignore  AGENTS.md  CLAUDE.md  MIGRATION_PLAN.md  Makefile  README.md  a.json  interview.md  pubspec.yaml  pyproject.toml
android/app/: build.gradle.kts
assets/roles/: finance.yaml  health.yaml  life.yaml  work.yaml
data/: dubora.db  dubora.db-shm  dubora.db-wal  dubora.db.v1-backup
deploy/: Dockerfile.task  Dockerfile.web  cloudbuild-pipeline.yaml  deploy-pipeline.sh  deploy-task.sh  deploy-web.sh  docker-compose.yml
docs/: ARCHITECTURE-UPGRADE.md  ARCHITECTURE.md  ARTIFACT_KEYS.md  ASR_FINAL_CONFIG.md  ASR_FIX_SUMMARY.md  AUDIO_FILES.md  CHANGELOG.md  DESIGN.md  GCP-DEPLOY.md  IDE-CHANGELOG.md  IDE-GUIDE.md  INSTALL.md  MT_TRANSLATION_ENGINES.md  PHASES_GUIDE.md  Private_Butler_PRD_v2.docx  Private_Butler_产品设计方案.docx  README.md  TERMS_GUIDE.md  TTS_ENGINES.md  V1_REVIEW.md  VISION.md  app-README.md  cache.txt  cli.txt  cost.txt  data-architecture.md  gcs.txt  issue.txt  mt.txt  pipeline.txt  prd.md  slang.txt  technical.txt  tos.txt  tts.txt  tune.txt  voice_list_filtered.csv  voice_list_filtered.py  产品方案设计.md  人名识别.txt  (+2 more)
lib/: main.dart
linux/: CMakeLists.txt
nianyin-icon-package/: README.md
resources/: schema.sql  seed.sql
test/: ASR_CLI_USAGE.md  README.md  asr_cli.py  doubao_asr_runner.py  name_guard_ssot.py  test_asr_local.py  test_asr_tools.py  test_doubao_asr.py  test_request_types.py  test_volcengine_api.py  widget_test.dart
web/: index.html  manifest.json  package-lock.json  package.json  tsconfig.tsbuildinfo
windows/: CMakeLists.txt
(+330 files in other folders)
